# RustECSPrototype

./: .gitignore  README.md
RustECS/: Cargo.toml
RustECS/src/: components.rs  main.rs  map.rs  player.rs
rust_ecs/: Cargo.toml
rust_ecs/resources/Custom/: Cards.xp
rust_ecs/resources/cards/: 001.xp  100.xp  200.xp  201.xp
rust_ecs/src/: camera.rs  components.rs  damage_system.rs  gamelog.rs  gui.rs  inventory_system.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  player.rs  random_table.rs  rect.rs  rex_assets.rs  saveload_system.rs  spawner.rs  visibility_system.rs
